--- a/ogamefarmer/OgameFarmer.csproj
+++ b/ogamefarmer/OgameFarmer.csproj
@@ -56,6 +56,7 @@
     <Compile Include="CommonInfo.cs" />
     <Compile Include="ConstructionInfo.cs" />
     <Compile Include="HttpAccesser.cs" />
+    <Compile Include="LocationsInfo.cs" />
     <Compile Include="LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
