--- a/ogamefarmer/OgameFarmer.csproj
+++ b/ogamefarmer/OgameFarmer.csproj
@@ -69,6 +69,12 @@
     <Compile Include="BaseInfo.cs" />
     <Compile Include="CommonInfo.cs" />
     <Compile Include="ConstructionInfo.cs" />
+    <Compile Include="DispatchForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DispatchForm.Designer.cs">
+      <DependentUpon>DispatchForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="HttpAccesser.cs" />
     <Compile Include="LocationsInfo.cs" />
     <Compile Include="LoginForm.cs">
@@ -91,6 +97,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Txtout.cs" />
     <Compile Include="ProductivityInfo.cs" />
+    <EmbeddedResource Include="DispatchForm.resx">
+      <DependentUpon>DispatchForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
