--- a/ogamefarmer/OgameFarmer.csproj
+++ b/ogamefarmer/OgameFarmer.csproj
@@ -95,6 +95,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SysmapForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SysmapForm.Designer.cs">
+      <DependentUpon>SysmapForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Txtout.cs" />
     <Compile Include="ProductivityInfo.cs" />
     <EmbeddedResource Include="DispatchForm.resx">
@@ -116,6 +122,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SysmapForm.resx">
+      <DependentUpon>SysmapForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
