--- a/ogamefarmer/OgameFarmer.csproj
+++ b/ogamefarmer/OgameFarmer.csproj
@@ -112,6 +112,7 @@
     </Compile>
     <Compile Include="Txtout.cs" />
     <Compile Include="ProductivityInfo.cs" />
+    <Compile Include="UnExpectPageController.cs" />
     <EmbeddedResource Include="DeadSheepForm.resx">
       <DependentUpon>DeadSheepForm.cs</DependentUpon>
     </EmbeddedResource>
