--- a/ogamefarmer/OgameFarmer.csproj
+++ b/ogamefarmer/OgameFarmer.csproj
@@ -66,6 +66,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="exception\UncompleteSettingException.cs" />
     <Compile Include="module\AccessDB.cs" />
     <Compile Include="info\BaseInfo.cs" />
     <Compile Include="info\CommonInfo.cs" />
