--- a/ogamefarmer/OgameFarmer.csproj
+++ b/ogamefarmer/OgameFarmer.csproj
@@ -57,6 +57,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
@@ -66,13 +67,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DefenceMessager.cs" />
+    <Compile Include="form\FleetForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="form\FleetForm.Designer.cs">
+      <DependentUpon>FleetForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="info\FleetInfo.cs" />
+    <Compile Include="messager\DefenceMessager.cs" />
     <Compile Include="form\DefenceForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="form\DefenceForm.Designer.cs">
       <DependentUpon>DefenceForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="messager\LoginMessager.cs" />
+    <Compile Include="messager\MainMessager.cs" />
     <Compile Include="strategy\AllDefence.cs" />
     <Compile Include="exception\UncompleteSettingException.cs" />
     <Compile Include="module\AccessDB.cs" />
@@ -132,6 +142,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="form\DispatchForm.resx">
       <DependentUpon>DispatchForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="form\FleetForm.resx">
+      <DependentUpon>FleetForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="form\LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
