--- a/ogamefarmer/OgameFarmer.csproj
+++ b/ogamefarmer/OgameFarmer.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="concept\Coordinate.cs" />
+    <Compile Include="concept\CoordinateType.cs" />
     <Compile Include="form\FleetForm.cs">
       <SubType>Form</SubType>
     </Compile>
