--- a/ogamefarmer/OgameFarmer.csproj
+++ b/ogamefarmer/OgameFarmer.csproj
@@ -179,7 +179,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="FleetUtil\FleetQuantityUtil.cs" />
+    <Compile Include="Util\FleetUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="image\star.ico" />
