--- a/ogamefarmer/OgameFarmer.csproj
+++ b/ogamefarmer/OgameFarmer.csproj
@@ -187,6 +187,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Util\HtmlAnalyzer.cs" />
     <Compile Include="Util\FleetUtil.cs" />
   </ItemGroup>
   <ItemGroup>
