--- a/ogamefarmer/GalaxyFarmer.csproj
+++ b/ogamefarmer/GalaxyFarmer.csproj
@@ -93,6 +93,12 @@
     <Compile Include="form\FleetForm.Designer.cs">
       <DependentUpon>FleetForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="form\SummaryForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="form\SummaryForm.designer.cs">
+      <DependentUpon>SummaryForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="info\Fleet1Info.cs" />
     <Compile Include="info\FleetInfo.cs" />
     <Compile Include="info\Floten1Info.cs" />
@@ -183,6 +189,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="form\LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="form\SummaryForm.resx">
+      <DependentUpon>SummaryForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="form\Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
