--- a/ogamefarmer/GalaxyFarmer.csproj
+++ b/ogamefarmer/GalaxyFarmer.csproj
@@ -112,6 +112,7 @@
     <Compile Include="info\BallListInfo.cs" />
     <Compile Include="info\PageInfo.cs" />
     <Compile Include="info\ProductivityInfoX.cs" />
+    <Compile Include="manager\Admin.cs" />
     <Compile Include="messager\BallListMessager.cs" />
     <Compile Include="messager\DefenceMessager.cs" />
     <Compile Include="form\DefenceForm.cs">
@@ -178,6 +179,9 @@
     <Compile Include="module\Txtout.cs" />
     <Compile Include="info\ProductivityInfo.cs" />
     <Compile Include="controller\UnExpectPageController.cs" />
+    <Compile Include="tabpage\TabPageSummary.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Util\ConvertUtil.cs" />
     <Compile Include="Util\LoggerUtil.cs" />
     <Compile Include="Util\StringUtil.cs" />
