--- a/ogamefarmer/GalaxyFarmer.csproj
+++ b/ogamefarmer/GalaxyFarmer.csproj
@@ -76,6 +76,7 @@
   <ItemGroup>
     <Compile Include="Commander\BallListCommander.cs" />
     <Compile Include="Commander\Commander.cs" />
+    <Compile Include="Commander\DefenceCommander.cs" />
     <Compile Include="Commander\FleetCommander.cs" />
     <Compile Include="Commander\LoginCommander.cs" />
     <Compile Include="Commander\ProductivityCommander.cs" />
@@ -103,6 +104,7 @@
       <DependentUpon>SummaryForm.cs</DependentUpon>
     </Compile>
     <Compile Include="global\ProgramStatic.cs" />
+    <Compile Include="info\DefenceInfo.cs" />
     <Compile Include="info\Fleet1Info.cs" />
     <Compile Include="info\FleetInfo.cs" />
     <Compile Include="info\Floten1Info.cs" />
@@ -179,6 +181,9 @@
     <Compile Include="module\Txtout.cs" />
     <Compile Include="info\ProductivityInfo.cs" />
     <Compile Include="controller\UnExpectPageController.cs" />
+    <Compile Include="tabpage\TabPageDefence.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="tabpage\TabPageSummary.cs">
       <SubType>Form</SubType>
     </Compile>
