--- a/ogamefarmer/GalaxyFarmer.csproj
+++ b/ogamefarmer/GalaxyFarmer.csproj
@@ -182,6 +182,8 @@
     <Compile Include="tabpage\TabPageSummary.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Util\AES.cs" />
+    <Compile Include="Util\Rijndael.cs" />
     <Compile Include="Util\ConvertUtil.cs" />
     <Compile Include="Util\LoggerUtil.cs" />
     <Compile Include="Util\StringUtil.cs" />
